# yolo_project

./: .gitignore  README.md  predefined_classes.txt  pyproject.toml
data/: data.yaml
data/processed_dataset/labels/: train.cache  val.cache
data/processed_dataset/labels/test/: frame_00033.txt
data/processed_dataset/labels/train/: frame_00001_aug_0.txt  frame_00001_aug_2.txt  frame_00001_aug_3.txt  frame_00001_aug_4.txt  frame_00002.txt  frame_00002_aug_0.txt  frame_00002_aug_1.txt  frame_00002_aug_3.txt  frame_00002_aug_4.txt  frame_00003.txt  frame_00003_aug_0.txt  frame_00003_aug_1.txt  frame_00003_aug_2.txt  frame_00003_aug_3.txt  frame_00005_aug_0.txt  frame_00005_aug_1.txt  frame_00005_aug_2.txt  frame_00005_aug_3.txt  frame_00005_aug_4.txt  frame_00006_aug_0.txt  frame_00006_aug_1.txt  frame_00006_aug_2.txt  frame_00008_aug_0.txt  frame_00008_aug_3.txt  frame_00009.txt  frame_00009_aug_0.txt  frame_00009_aug_1.txt  frame_00009_aug_2.txt  frame_00009_aug_3.txt  frame_00009_aug_4.txt  frame_00010_aug_0.txt  (+419 more)
data/raw_frames/: classes.txt  frame_00001.txt  frame_00006.txt  frame_00046.txt  frame_00051.txt  frame_00052.txt  frame_00056.txt  frame_00058.txt  frame_00063.txt  frame_00070.txt  frame_00074.txt  frame_00092.txt  frame_00117.txt  frame_00132.txt  frame_00135.txt  frame_00138.txt  frame_00148.txt  frame_00149.txt  frame_00151.txt  frame_00152.txt  frame_00153.txt
docs/: report.md
runs/detect/train/: args.yaml  results.csv
scripts/: augment_data.py  combine_videos.py  extract_frames.py  run_inference_on_video.py  split_dataset.py  train.py
(+9 files in other folders)
