[project]
name = "yolo project"
version = "0.1.0"
description = "Работа с моделью yolo11"
authors = [
    {name = "lolukuk",email = "lolukuk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
