[project]
name = "yolo-project"
version = "0.1.0"
description = ""
authors = [
    {name = "lolukuk",email = "lolukuk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
